MyMediatek.models.Media = (function () {

    class Media {
        constructor (title, releaseDate, rating, img) {
            this.title = title
            this.releaseDate = releaseDate
            this.rating = rating
            this.img = img
        }
    }

    return Media

})()
